Changelog:
----------

99-07-01 [morten]:
	* Added new framework for State-machines, see misc/statemachines.c
	  and G3/fsm.c
	* hdlc-framing.c can now be asked if it is idle, and for how many
	  bits it has been so.  Usefull for deciding if the current frame
	  has completed so that a signal-chain reconfiguration or similar
	  can be performed.
	* The file 'G3/commandframes.c' contains a rough attempt at
	  assemblig command-frames (DIS, NSF, CSI etc.) that can be used
	  by the statemachines when various responses are needed.
	
99-06-28 [becka]:
	* modified environment.c to not abort when realtime stuff cannot be
	  initialized.
	* changed amodemd to use -D foer daemon mode as used by most other
	  daemons. -d usually means debug.
	* Changed signalgen.c to allow for direct signal setup at
	  construction time. IMHO we should split that module into a sine,
	  a noise and a silence generator.
	* Implemented syncbit.c to decouple bit extraction from the fsk-
	  demodulator stream from the bitstream decoders.
	* Changed hdlc_decoder to expect a bitstream. Both modules are 
	  untested.

98-11-29 [becka]:
	* initial release.